@@ -123,6 +123,7 @@
                         --add-exports javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED
                         --add-exports javafx.graphics/com.sun.javafx.scene.traversal=ALL-UNNAMED
                         --add-exports javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED
+                        --add-exports javafx.graphics/com.sun.javafx.binding=ALL-UNNAMED
                         --add-exports javafx.base/com.sun.javafx.binding=ALL-UNNAMED
                         --add-exports javafx.base/com.sun.javafx.collections=ALL-UNNAMED
                         --add-exports javafx.base/com.sun.javafx=ALL-UNNAMED
